--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
     "require-dev": {
         "camelot/coding-style": "^2.0",
         "doctrine/doctrine-bundle": "^1.6.10",
-        "friendsofphp/php-cs-fixer": "^2.15",
-        "phpunit/phpunit": "^8.4",
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "phpunit/phpunit": "^7.5 || ^8.4",
         "ramsey/uuid-doctrine": "^1.5",
-        "symfony/config": "^4.3",
-        "symfony/debug-bundle": "^4.3",
-        "symfony/framework-bundle": "^4.3",
-        "symfony/http-kernel": "^4.3",
-        "symfony/phpunit-bridge": "^4.3.4",
-        "symfony/var-dumper": "^4.3",
-        "symfony/yaml": "^4.3"
+        "symfony/config": "^4.3 || ^5.0",
+        "symfony/debug-bundle": "^4.3 || ^5.0",
+        "symfony/framework-bundle": "^4.3 || ^5.0",
+        "symfony/http-kernel": "^4.3 || ^5.0",
+        "symfony/phpunit-bridge": "^4.3.4 || ^5.0",
+        "symfony/var-dumper": "^4.3 || ^5.0",
+        "symfony/yaml": "^4.3 || ^5.0"
     },
     "autoload": {
         "psr-4": {
