--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require-dev": {
         "camelot/coding-style": "^2.0",
-        "doctrine/doctrine-bundle": "^1.6.10",
+        "doctrine/doctrine-bundle": "^1.6.10 || ^2.0",
         "friendsofphp/php-cs-fixer": "^2.16",
         "phpunit/phpunit": "^7.5 || ^8.4",
         "ramsey/uuid-doctrine": "^1.5",
