--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,21 @@
     "require": {
         "php": "^7.4",
         "doctrine/annotations": "^1.7",
-        "doctrine/orm": "^2.5.11"
+        "doctrine/orm": "^2.7"
     },
     "require-dev": {
         "camelot/coding-style": "^2.0",
-        "doctrine/doctrine-bundle": "^1.6.10",
+        "doctrine/doctrine-bundle": "^2.0",
         "friendsofphp/php-cs-fixer": "^2.16",
-        "phpunit/phpunit": "^7.5 || ^8.4",
+        "phpunit/phpunit": "^8.4",
         "ramsey/uuid-doctrine": "^1.5",
-        "symfony/config": "^4.3 || ^5.0",
-        "symfony/debug-bundle": "^4.3 || ^5.0",
-        "symfony/framework-bundle": "^4.3 || ^5.0",
-        "symfony/http-kernel": "^4.3 || ^5.0",
-        "symfony/phpunit-bridge": "^4.3.4 || ^5.0",
-        "symfony/var-dumper": "^4.3 || ^5.0",
-        "symfony/yaml": "^4.3 || ^5.0"
+        "symfony/config": "^5.0",
+        "symfony/debug-bundle": "^5.0",
+        "symfony/framework-bundle": "^5.0",
+        "symfony/http-kernel": "^5.0",
+        "symfony/phpunit-bridge": "^5.0",
+        "symfony/var-dumper": "^5.0",
+        "symfony/yaml": "^5.0"
     },
     "autoload": {
         "psr-4": {
